--- a/Views/Home/People.cshtml
+++ b/Views/Home/People.cshtml
@@ -7,3 +7,5 @@
 
 <a class="btn btn-sm btn-success" asp-controller="People" asp-action="Create">Create a new Person</a>
 <a class="btn btn-sm btn-success" asp-controller="PersonTypes" asp-action="Create">Create a new Person Type</a>
+<a class="btn btn-sm btn-success" asp-controller="People" asp-action="Index">List People</a>
+<a class="btn btn-sm btn-success" asp-controller="PersonTypes" asp-action="Index">List Person Types</a>
