--- a/Views/PersonTypes/Delete.cshtml
+++ b/Views/PersonTypes/Delete.cshtml
@@ -25,3 +25,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+<a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
