--- a/Views/PersonTypes/Index.cshtml
+++ b/Views/PersonTypes/Index.cshtml
@@ -7,7 +7,8 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-sm btn-success" asp-controller="PersonTypes" asp-action="Create">Create a new Person Type</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </p>
 <table class="table">
     <thead>
