--- a/Views/People/Create.cshtml
+++ b/Views/People/Create.cshtml
@@ -64,15 +64,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="PersonTypeId" class="control-label"></label>
-                <select asp-for="PersonTypeId" class ="form-control" asp-items="ViewBag.PersonTypeId"></select>
+                <select asp-for="PersonTypeId" class="form-control" asp-items="ViewBag.PersonTypeId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class ="form-control" asp-items="ViewBag.CompanyId"></select>
+                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ClubId" class="control-label"></label>
-                <select asp-for="ClubId" class ="form-control" asp-items="ViewBag.ClubId"></select>
+                <select asp-for="ClubId" class="form-control" asp-items="ViewBag.ClubId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="SwishNumber" class="control-label"></label>
@@ -90,14 +90,19 @@
                 <span asp-validation-for="BankName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="IdentityUserId" class="control-label"></label>
+                <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-sm btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-sm btn-success" asp-controller="People" asp-action="Index">Back to People List</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </div>
 
 @section Scripts {
