--- a/Views/People/Delete.cshtml
+++ b/Views/People/Delete.cshtml
@@ -111,7 +111,8 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-sm btn-danger" />
+        <a class="btn btn-sm btn-success" asp-controller="People" asp-action="Index">Back to People List</a>
+        <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
     </form>
 </div>
