--- a/Views/People/Edit.cshtml
+++ b/Views/People/Edit.cshtml
@@ -94,6 +94,10 @@
                 <span asp-validation-for="BankName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="IdentityUserId" class="control-label"></label>
+                <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -101,7 +105,8 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-sm btn-success" asp-controller="People" asp-action="Index">Back to People List</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </div>
 
 @section Scripts {
