--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -7,25 +7,18 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-sm btn-success" asp-controller="People" asp-action="Create">Create a new Person</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayNameFor(model => model.FullName)
             </th>
+
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StreetAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ZipCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
+                @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Country)
@@ -34,10 +27,7 @@
                 @Html.DisplayNameFor(model => model.Ssn)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber2)
+                @Html.DisplayNameFor(model => model.PhoneNumbers)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -60,6 +50,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.BankName)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IdentityUser)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -67,19 +60,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
+                @Html.DisplayFor(modelItem => item.FullName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreetAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
+                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Country)
@@ -88,22 +72,19 @@
                 @Html.DisplayFor(modelItem => item.Ssn)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber2)
+                @Html.DisplayFor(modelItem => item.PhoneNumbers)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PersonType.Id)
+                @Html.DisplayFor(modelItem => item.PersonType.PersonTypeName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Company.Id)
+                @Html.DisplayFor(modelItem => item.Company.ComanyName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Club.Id)
+                @Html.DisplayFor(modelItem => item.Club.ClubName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SwishNumber)
@@ -113,6 +94,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BankName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IdentityUser.Email)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
