--- a/Views/PersonTypes/Create.cshtml
+++ b/Views/PersonTypes/Create.cshtml
@@ -25,6 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-sm btn-success" asp-controller="PersonTypes" asp-action="Index">Back to List Person Types</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </div>
 
