--- a/Views/PersonTypes/Details.cshtml
+++ b/Views/PersonTypes/Details.cshtml
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-sm btn-success" asp-controller="PersonTypes" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </div>
