--- a/Views/PersonTypes/Edit.cshtml
+++ b/Views/PersonTypes/Edit.cshtml
@@ -26,6 +26,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-sm btn-success" asp-controller="Home" asp-action="People">Back to People</a>
 </div>
 
