--- a/Views/Home/Accounting.cshtml
+++ b/Views/Home/Accounting.cshtml
@@ -45,3 +45,21 @@
         </div>
     </div>
 </div>
+<div class="alert-heading align-content-center">
+    <h2>Referee Fee Tools</h2>
+    <div class="col-lg-12">
+        <h2>Create</h2>
+        <div class="row col-sm-6">
+            <a class="btn btn-sm btn-success" asp-controller="RefFees" asp-action="Create">Create Referee Fee</a>
+            <a class="btn btn-sm btn-success" asp-controller="FeeCategories" asp-action="Create">Create Referee Fee Category</a>
+        </div>
+    </div>
+    <div class="col-lg-12">
+        <h2>List</h2>
+        <div class="row col-sm-6">
+            <a class="btn btn-sm btn-success" asp-controller="RefFees" asp-action="Index">List all Referee Fees</a>
+            <a class="btn btn-sm btn-success" asp-controller="FeeCategories" asp-action="Index">List all Referee Fee Categories</a>
+
+        </div>
+    </div>
+</div>
